# monkey

./: .gitignore  .justfile  CMakeLists.txt  main.cpp
monkey_lib/: AST.cpp  AST.h  CMakeLists.txt  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  FileRunner.cpp  FileRunner.h  Lexer.cpp  Lexer.h  Object.cpp  Object.h  Parser.cpp  Parser.h  REPL.cpp  REPL.h  Token.cpp  Token.h  utilities.cpp  utilities.h
tests/: AST_tests.cpp  CMakeLists.txt  Evaluator_tests.cpp  Lexer_tests.cpp  Parser_tests.cpp
